News UAT/force-app/main/default/objects/Case/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>ABN Number</description>
    <formula>Account.AccountNumber</formula>
    <label>ABN</label>
    <type>Text</type>
</CustomField>