News UAT/force-app/main/default/objects/Case/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <formula>CASESAFEID(AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID 18</label>
    <type>Text</type>
</CustomField>