News UAT/force-app/main/default/objects/Case/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Record Type from Account for SLA Logic</description>
    <formula>Account.RecordType.DeveloperName</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>