News UAT/force-app/main/default/objects/Case/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type for Complaint/DRS</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>