News UAT/force-app/main/default/objects/Case/fields/Advertising_Type__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Type__c</fullName>
    <description>Advertising Type for Complaint/DRS Case</description>
    <label>Advertising Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>