News UAT/force-app/main/default/objects/Case/fields/Affects_Version__c.field-meta.xml
<CustomField>
    <fullName>Affects_Version__c</fullName>
    <label>Affects Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT Cycle 1</fullName>
            </value>
            <value>
                <fullName>UAT Cycle 2</fullName>
            </value>
            <value>
                <fullName>UAT Cycle 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>