News UAT/force-app/main/default/objects/Case/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <description>Age range for target audience</description>
    <inlineHelpText>Age range for target audience (if Male and/or Female selected)</inlineHelpText>
    <label>Age Range</label>
    <length>30</length>
    <type>Text</type>
</CustomField>