News UAT/force-app/main/default/objects/Case/fields/Agent_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Agent_Start_Date_Time__c</fullName>
    <label>Agent Start Date/Time</label>
    <type>DateTime</type>
</CustomField>