News UAT/force-app/main/default/objects/Case/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Agreement related to the Account on an RFP (junction).</description>
    <label>Agreement</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account_Agreement_Relationship__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Agreement_Relationship__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_del</relationshipName>
    <type>Lookup</type>
</CustomField>