News UAT/force-app/main/default/objects/Case/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount for Complaint/DRS Case</description>
    <label>Credit/Makegood/100% Save Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>