News UAT/force-app/main/default/objects/Case/fields/Any_other_information_we_should_know__c.field-meta.xml
<CustomField>
    <fullName>Any_other_information_we_should_know__c</fullName>
    <label>Any other information we should know?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>