News UAT/force-app/main/default/objects/Case/fields/Any_Specific_Research_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Any_Specific_Research_Requirements__c</fullName>
    <description>Specific Insight Research Requirements</description>
    <label>From above, any specific focuses</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>