News UAT/force-app/main/default/objects/Case/fields/Apex_AutoResponse_Sent__c.field-meta.xml
<CustomField>
    <fullName>Apex_AutoResponse_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFE-46 - Where an auto-response has been set, this flag is ticked to prevent further messages. WHY? Because E2C creates the case and our trigger does an update to the case before it sends an &#39;auto-response&#39; therefore this will trigger the email multiple times potentiallly.</description>
    <label>Apex: AutoResponse Sent</label>
    <type>Checkbox</type>
</CustomField>