News UAT/force-app/main/default/objects/Case/fields/Apex_Count_Incoming_Emails__c.field-meta.xml
<CustomField>
    <fullName>Apex_Count_Incoming_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Used to count incoming emails so we do not send multiple auto-responses. This is set by WF Email Services.
Not shown to any users except Admin.</inlineHelpText>
    <label>Apex: Count Incoming Emails</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>