News UAT/force-app/main/default/objects/Case/fields/Apex_Cust_Replied_Since_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Apex_Cust_Replied_Since_Last_Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFE-46 - Checkbox is updated by workflows by counting Inbound + Outbound Email services. This is to notify agents that the customer has responded to the last agent&#39;s email.</description>
    <inlineHelpText>This notification flags that the customer has responded to the last email sent by the agent. This may be helpful to see quickly that an existing case may have had a response.</inlineHelpText>
    <label>Apex Cust Replied Since Last Interaction</label>
    <type>Checkbox</type>
</CustomField>