News UAT/force-app/main/default/objects/Case/fields/Apex_Fax_Body__c.field-meta.xml
<CustomField>
    <fullName>Apex_Fax_Body__c</fullName>
    <description>It is used for apex future call. Don&#39;t need to be displayed on page layout.</description>
    <label>Apex Fax Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>