News UAT/force-app/main/default/objects/Case/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Appointment Date</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>