News UAT/force-app/main/default/objects/Case/fields/Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Appointment Scheduled</description>
    <label>Appointment Scheduled?</label>
    <type>Checkbox</type>
</CustomField>