News UAT/force-app/main/default/objects/Case/fields/Aspects_of_Brand_Essence__c.field-meta.xml
<CustomField>
    <fullName>Aspects_of_Brand_Essence__c</fullName>
    <description>Brand Essence</description>
    <inlineHelpText>Any further information</inlineHelpText>
    <label>About the brand or category</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>