News UAT/force-app/main/default/objects/Case/fields/Attach_Conversation_Starter__c.field-meta.xml
<CustomField>
    <fullName>Attach_Conversation_Starter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attach Conversation Starter - i.e. Precall Planning Sheet</description>
    <inlineHelpText>Attach Conversation Starter - i.e. Precall Planning Sheet</inlineHelpText>
    <label>Attach Conversation Starter</label>
    <type>Checkbox</type>
</CustomField>