News UAT/force-app/main/default/objects/Case/fields/Attach_Output_From_NEWS__c.field-meta.xml
<CustomField>
    <fullName>Attach_Output_From_NEWS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attach Output from NEWS Australia Audience Bundler</description>
    <inlineHelpText>Attach Output from NEWS Australia Audience Bundler</inlineHelpText>
    <label>Attach Output From NEWS Audience Bundler</label>
    <type>Checkbox</type>
</CustomField>