News UAT/force-app/main/default/objects/Case/fields/Attitudes_and_Interests__c.field-meta.xml
<CustomField>
    <fullName>Attitudes_and_Interests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attitudes and Interests</label>
    <type>Checkbox</type>
</CustomField>