News UAT/force-app/main/default/objects/Case/fields/Audience_Heroes__c.field-meta.xml
<CustomField>
    <fullName>Audience_Heroes__c</fullName>
    <description>Audience heroes which best describes your client&#39;s primary target audience</description>
    <inlineHelpText>Audience heroes which best describes your client&#39;s primary target audience (you can select more than one). If not sure, click the link to the right.</inlineHelpText>
    <label>Audience Heroes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRACE (Grocery Buying Mums w/ Kids 0-5)</fullName>
            </value>
            <value>
                <fullName>HENRY &amp; FRANCES (Over 65s)</fullName>
            </value>
            <value>
                <fullName>MRS SWINBURNE(GrocerBuyMumsw/Kids&lt;18)</fullName>
            </value>
            <value>
                <fullName>THE ROSS CLAN (Family w/ Children &lt;18)</fullName>
            </value>
            <value>
                <fullName>MARGARET (Female Empty Nester 25-54)</fullName>
            </value>
            <value>
                <fullName>KENNETH (Male Sports Enthusiast 25-54)</fullName>
            </value>
            <value>
                <fullName>MEL &amp; BEN (25-54)</fullName>
            </value>
            <value>
                <fullName>JOE &amp; KATE (Homeowners)</fullName>
            </value>
            <value>
                <fullName>MATT (Passive Jobseeker)</fullName>
            </value>
            <value>
                <fullName>TIM (Male Grocery Buyer 25-54)</fullName>
            </value>
            <value>
                <fullName>ROB (Men 25-54)</fullName>
            </value>
            <value>
                <fullName>MIKE &amp; AMANDA (AB&#39;s)</fullName>
            </value>
            <value>
                <fullName>RENAE (Women 25-54)</fullName>
            </value>
            <value>
                <fullName>PAUL &amp; TESS (Homebuyers)</fullName>
            </value>
            <value>
                <fullName>THE BRADSHAWS (Family/Car Buyers)</fullName>
            </value>
            <value>
                <fullName>BELINDA (Female 25-39)</fullName>
            </value>
            <value>
                <fullName>GEORGE &amp; ANNE (Baby Boomers)</fullName>
            </value>
            <value>
                <fullName>EDDIE &amp; JANE (Young People 18-24)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>