News UAT/force-app/main/default/objects/Case/fields/AutomaticallyAssignCase__c.field-meta.xml
<CustomField>
    <fullName>AutomaticallyAssignCase__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the box is ticked, this Case will be automatically assigned to the RFP or NFSS queue depending on the case record type.</description>
    <inlineHelpText>If the box is ticked, this Case will be automatically assigned to another user/group (e.g. Customer Solutions, National Finance Shared Services)</inlineHelpText>
    <label>Automatically Assign Case</label>
    <type>Checkbox</type>
</CustomField>