News UAT/force-app/main/default/objects/Case/fields/Basic_Audience_Solution_Required__c.field-meta.xml
<CustomField>
    <fullName>Basic_Audience_Solution_Required__c</fullName>
    <inlineHelpText>Is there any geographic focus involved in the audience solution?</inlineHelpText>
    <label>State or Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>