News UAT/force-app/main/default/objects/Case/fields/Booking_Account__c.field-meta.xml
<CustomField>
    <fullName>Booking_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Account #</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>External_Account__c.Customer_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>External_Account__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Cases (Booking Account #)</relationshipLabel>
    <relationshipName>CubeCases</relationshipName>
    <type>Lookup</type>
</CustomField>