News UAT/force-app/main/default/objects/Case/fields/Booking_Classification__c.field-meta.xml
<CustomField>
    <fullName>Booking_Classification__c</fullName>
    <formula>Booking__r.CyberAd_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Classification</label>
    <type>Text</type>
</CustomField>