News UAT/force-app/main/default/objects/Case/fields/Booking_Division__c.field-meta.xml
<CustomField>
    <fullName>Booking_Division__c</fullName>
    <description>Booking Division for Complaint/DRS</description>
    <label>Booking Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>HWT</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>QNP</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>MNG</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>NQN</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>