News UAT/force-app/main/default/objects/Case/fields/Booking_Run_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Booking_Run_Schedule__c</fullName>
    <formula>Booking__r.Run_Schedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Run Schedule</label>
    <type>Text</type>
</CustomField>