News UAT/force-app/main/default/objects/Case/fields/Booking_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sales_Order__c</fullName>
    <description>Booking Sales Order</description>
    <formula>Booking__r.Sales_Order__c</formula>
    <label>Booking Sales Order</label>
    <type>Text</type>
</CustomField>