News UAT/force-app/main/default/objects/Case/fields/Booking_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sheet__c</fullName>
    <formula>IF(CPQ_Sales_Order__c  != &#39;&#39;, HYPERLINK(&#39;/apex/AT_BookingSheet?id=&#39; + CPQ_Sales_Order__c, &#39;[View Instructions]&#39;,&#39;_blank&#39;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Sheet</label>
    <type>Text</type>
</CustomField>