News UAT/force-app/main/default/objects/Case/fields/Booking_System_Account__c.field-meta.xml
<CustomField>
    <fullName>Booking_System_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking System Account for successful Credit Application</description>
    <label>Booking System Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>External_Account__c.Customer_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>