News UAT/force-app/main/default/objects/Case/fields/Booking_System_Account_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_System_Account_Credit_Status__c</fullName>
    <description>Booking System Account Credit Status (from Booking)</description>
    <formula>TEXT(Booking_System_Account__r.Credit_Status__c)</formula>
    <label>Booking System Account Credit Status</label>
    <type>Text</type>
</CustomField>