News UAT/force-app/main/default/objects/Case/fields/Booking_System_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_System_Account_Number__c</fullName>
    <description>T Number used for Credit/Debit Application confirmation</description>
    <formula>Booking_System_Account__r.Account_No__c</formula>
    <label>Booking System Account Number</label>
    <type>Text</type>
</CustomField>