News UAT/force-app/main/default/objects/Case/fields/Brand_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Brand_Positioning__c</fullName>
    <description>Brand Positioning</description>
    <label>Brand Positioning</label>
    <length>200</length>
    <type>Text</type>
</CustomField>