News UAT/force-app/main/default/objects/Case/fields/Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_ID__c</fullName>
    <description>Call ID to support Verint Call Recording integration.</description>
    <label>Interaction ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>