News UAT/force-app/main/default/objects/Case/fields/Call_Recording_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Date__c</fullName>
    <description>Call Recording Date for a Complaint/DRS</description>
    <label>Call Recording Date</label>
    <type>Date</type>
</CustomField>