News UAT/force-app/main/default/objects/Case/fields/Campaign_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Commencement_Date__c</fullName>
    <description>Specify date for campaign to commence</description>
    <label>Campaign Commencement Date</label>
    <type>Date</type>
</CustomField>