News UAT/force-app/main/default/objects/Case/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <description>Specify date for campaign to cease</description>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>