News UAT/force-app/main/default/objects/Case/fields/Campaign_Integration__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Integration__c</fullName>
    <label>Campaign Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>