News UAT/force-app/main/default/objects/Case/fields/Case_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity__c</fullName>
    <label>Case Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compexity</valueSetName>
    </valueSet>
</CustomField>