News UAT/force-app/main/default/objects/Case/fields/Case_Origin_Copy__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_Copy__c</fullName>
    <label>Case Origin Copy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>