News UAT/force-app/main/default/objects/Case/fields/Case_Owner_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Phone_Number__c</fullName>
    <formula>Owner:User.Phone</formula>
    <label>Case Owner Phone Number</label>
    <type>Text</type>
</CustomField>