News UAT/force-app/main/default/objects/Case/fields/CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>CC_Recipients__c</fullName>
    <description>To show cc recipients from email</description>
    <label>CC Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>