News UAT/force-app/main/default/objects/Case/fields/CLI__c.field-meta.xml
<CustomField>
    <fullName>CLI__c</fullName>
    <description>CLI for CTI</description>
    <label>CLI</label>
    <type>Phone</type>
</CustomField>