News UAT/force-app/main/default/objects/Case/fields/Client_Goal__c.field-meta.xml
<CustomField>
    <fullName>Client_Goal__c</fullName>
    <description>Client analysis: what is client trying to achieve</description>
    <inlineHelpText>What do we need to do with media? (e.g. to raise awareness, to educate, to change perceptions, to broaden their audience and so on.)</inlineHelpText>
    <label>Media Objectives</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>