News UAT/force-app/main/default/objects/Case/fields/Competitive_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Pitch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the a competitive pitch?</description>
    <inlineHelpText>Is the a competitive pitch? If so, provide details at right</inlineHelpText>
    <label>Competitive Pitch?</label>
    <type>Checkbox</type>
</CustomField>