News UAT/force-app/main/default/objects/Case/fields/Competitive_Pitch_Details__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Pitch_Details__c</fullName>
    <description>Competitive Pitch details - including value/share</description>
    <inlineHelpText>Competitive Pitch details - including value/share</inlineHelpText>
    <label>Competitive Pitch Details</label>
    <type>TextArea</type>
</CustomField>