News UAT/force-app/main/default/objects/Case/fields/Complaint_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Pillar__c</fullName>
    <label>Complaint Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Trades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>