News UAT/force-app/main/default/objects/Case/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <label>Components</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts and Contacts</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Bookings</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>