News UAT/force-app/main/default/objects/Case/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <description>Creative content Contact Details</description>
    <inlineHelpText>Creative content Contact Details</inlineHelpText>
    <label>Contact Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>