News UAT/force-app/main/default/objects/Case/fields/Contains_Xtend_Products__c.field-meta.xml
<CustomField>
    <fullName>Contains_Xtend_Products__c</fullName>
    <formula>Opportunity__r.Opportunity_Platform_NewsXtend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contains Xtend Products</label>
    <type>Checkbox</type>
</CustomField>