News UAT/force-app/main/default/objects/Case/fields/Copy__c.field-meta.xml
<CustomField>
    <fullName>Copy__c</fullName>
    <description>Copy</description>
    <inlineHelpText>Creative content Copy</inlineHelpText>
    <label>Copy</label>
    <type>TextArea</type>
</CustomField>