News UAT/force-app/main/default/objects/Case/fields/Corporate_Structure__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Structure__c</fullName>
    <description>Corporate Structure</description>
    <inlineHelpText>Select the corporate structure of the Account applying for credit</inlineHelpText>
    <label>Corporate Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proprietary Limited</fullName>
            </value>
            <value>
                <fullName>Public Company</fullName>
            </value>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Incorporated Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>