News UAT/force-app/main/default/objects/Case/fields/CPQ_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Sales_Order__c</fullName>
    <label>CPQ Sales Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>