News UAT/force-app/main/default/objects/Case/fields/CSPOFA__Orchestration_Step__c.field-meta.xml
<CustomField>
    <fullName>CSPOFA__Orchestration_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orchestration Step</label>
    <referenceTo>CSPOFA__Orchestration_Step__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>