News UAT/force-app/main/default/objects/Case/fields/CSPOFA__Orchestration_Step_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>CSPOFA__Orchestration_Step_Close_Reason__c</fullName>
    <label>Orchestration Step Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed successfully</fullName>
            </value>
            <value>
                <fullName>Could not be completed</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Cannot Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>