News UAT/force-app/main/default/objects/Case/fields/Current_User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Owner__c</fullName>
    <formula>OwnerId  = $User.Id</formula>
    <label>Current User is Owner</label>
    <type>Checkbox</type>
</CustomField>