News UAT/force-app/main/default/objects/Case/fields/Customer_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Customer_KPIs__c</fullName>
    <description>Key performance indicators that the customer will use to measure campaign success</description>
    <inlineHelpText>What are they looking for in particular? (e.g. Reach, conversions, sales?)</inlineHelpText>
    <label>How will the campaign be measured</label>
    <type>TextArea</type>
</CustomField>